Fix hovered cells backgrounds overlapping border
Due the previous change of rounded borders for the grid, it was
overlooked that highlighted cell's backgrounds would extend past the
border.

--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,34 @@ h1 {
 	background-color: hsl(0, 0%, 25%);
 }
 
-.no-b {
+.left {
+	border-left: none;
+}
+
+.top {
+	border-top: none;
+}
+
+.bottom {
 	border-bottom: none;
 }
 
-.no-r {
+.right {
 	border-right: none;
+}
+
+.bottom.left {
+	border-radius: 0px 0px 0px 20px;
+}
+
+.bottom.right {
+	border-radius: 0px 0px 20px 0px;
+}
+
+.top.right {
+	border-radius: 0px 20px 0px 0px;
+}
+
+.top.left {
+	border-radius: 20px 0px 0px 0px;
 }
